@@ -1,7 +1,9 @@
 Lego Editor Change Log
 
-  *  Implemented Copy/Paste for Assertions, D / Q / V and Expressions anywhere else the appear
   *  Fixed null pointers that could happen with empty measurement values 
-  *  artf227507 Fixed bound change not allowing save bug
   *  Fixed a bug that caused a doubleclick to sometimes not open a lego for editing
+  *  Fix memory leaks caused by javafx Bindings
+  *  artf226891 (partial) Implemented Copy/Paste for Assertions, D / Q / V and Expressions anywhere else the appear
   *  artf227475 Allow rename of lego list
+  *  artf227509 Fix consistency of 'pencil' icon in the left list of legos
+  *  artf227507 Fixed bound change not allowing save bug
